[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
x11rb = "0.13"
winit = "0.29"
softbuffer = "0.4"
raw-window-handle = "0.6"
resvg = "0.47.0"
reqwest = { version = "0.13.2", features = ["json"]}
tokio = { version = "1", features = ["full"] }
bytes = "1.11.1"
